<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="20dp">
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" android:gravity="center_horizontal" android:textSize="18sp"/>
        <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnPhone"/>
        <Button
                android:text="@string/web_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnURL"/>
        <Button
                android:text="@string/call_logs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCallLog"/>
        <Button
                android:text="@string/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnContact"/>
        <Button
                android:text="@string/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnGallery"/>
        <Button
                android:text="@string/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCamera"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnAlarm" android:text="@string/alarm"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>